[gd_scene load_steps=10 format=3 uid="uid://yh0j8558nksh"]

[ext_resource type="Script" path="res://scripts/rocket.gd" id="1_v66u8"]
[ext_resource type="Script" path="res://compo/HitboxComponent.gd" id="2_xwkas"]
[ext_resource type="Texture2D" uid="uid://xa4eyuodflx5" path="res://art/abilities/smoke.png" id="3_s6yxl"]
[ext_resource type="Texture2D" uid="uid://ru4x1nkdoc51" path="res://art/abilities/rocket_bullet.png" id="4_ej60d"]
[ext_resource type="AudioStream" uid="uid://dfxpoj7hw5475" path="res://sounds/ability/rocket_start.wav" id="5_hw03x"]
[ext_resource type="AudioStream" uid="uid://yw0jqa6fecl7" path="res://sounds/ability/explosion.wav" id="6_lmk3n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lmtxh"]
radius = 3.0
height = 12.0

[sub_resource type="Curve" id="Curve_7td12"]
max_value = 3.0
_data = [Vector2(0, 0.989011), 0.0, 1.74725, 0, 1, Vector2(1, 2.73626), 1.74725, 0.0, 1, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ke1w8"]
offsets = PackedFloat32Array(0, 0.473333, 1)
colors = PackedColorArray(0.791912, 0.421309, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0.152941)

[node name="Rocket" type="Node2D"]
scale = Vector2(4, 4)
script = ExtResource("1_v66u8")

[node name="HitboxComponent" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 8
collision_mask = 2
script = ExtResource("2_xwkas")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_lmtxh")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-4, 0)
emitting = false
amount = 20
lifetime = 0.2
texture = ExtResource("3_s6yxl")
gravity = Vector2(0, 0)
angular_velocity_min = 100.0
angular_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_7td12")
color_ramp = SubResource("Gradient_ke1w8")

[node name="RocketImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("4_ej60d")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Start" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hw03x")
autoplay = true
bus = &"sfx"

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lmk3n")
bus = &"sfx"

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
